--- a/project/app/assets/stylesheets/frontend.scss
+++ b/project/app/assets/stylesheets/frontend.scss
@@ -1,2 +1,685 @@
 @import "base";
 
+/**
+ * Advert Plus
+*/
+.navbar {
+	background-image: -webkit-linear-gradient(top, #ffffff 0%, #ffffff 100%);
+    background-image: linear-gradient(to bottom, #ffffff 0%, #ffffff 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffffffff', GradientType=0);
+    border-radius: 0; 
+    background: transparent;
+    /*@shadow: inset 0 1px 0 rgba(255,255,255,.15), 0 1px 5px rgba(0,0,0,.075);
+    .box-shadow(@shadow);  */
+
+    margin-top: 10px;
+	margin-bottom: 10px;
+
+	.navbar-nav {
+		> .active {
+			> a {
+		  		background-color: #ffffff;
+		  		background-color: #E8E8E8;
+		  		border: 1px solid #DDDDDD;
+		  	}	
+	  	}	
+    }
+}
+
+.nav-tabs > li {
+	.active > a {
+		background: #F7F7F7;
+	}	
+}
+
+.navbar-default {
+  border: none;
+}
+
+/* logo */
+.navbar-brand {
+	
+	&:hover {
+	  text-decoration: none;
+	}
+
+	font: {
+		weight: 100;
+		size: 29px;
+		family: 'Open Sans', Tahoma, sans-serif;
+	}
+
+	display: block;
+	margin-top: 10px;
+	padding: 0px 9px;
+	line-height: 21px;
+	text-transform: uppercase;
+	float: left;
+	height: 60px;
+	line-height: 60px;	
+	font-family: 'Open Sans', Tahoma, sans-serif;	
+
+	i {
+		float: left;
+	    font-size: 35px;
+	    margin-top: 0px;
+	    text-align: left;
+	    width: 50px;
+	    color: #EA4135;
+	    margin-right: 1px;		
+	}
+
+	strong {
+		font-weight: 800;	
+	}
+
+	span {
+		float: left;
+  		height: 20px;
+  		line-height: 20px;	
+  		color: #000;
+	}
+
+	small {
+		font : {
+			size: 13px;
+			weight: 100;
+			family: "Pacifico", Monaco, Consolas, monospace;
+		}
+
+	    color: #EA4135;	    
+	    height: 20px;
+	    line-height: 20px;
+	    text-transform: none;	    
+	}
+
+	.handwriting {
+	  float: right;
+	  text-transform: uppercase;
+	}
+}
+
+.post-ad-btn {
+	padding: 2px 10px;
+	height: 25px;
+	width: auto;
+	margin-left: 5px;
+}
+
+.footer {
+	border-top: 1px solid #E5E5E5;
+	background: #F7F7F7;
+	color: #777777;
+	padding-top: 19px;
+	font-size: 11px;
+	text-align: center;
+	padding-bottom: 20px;
+	margin-top: 40px;
+
+	p {
+		margin-bottom: 0;
+	}
+
+	strong {
+		color: #000;
+	}
+
+	@media (min-width: 768px) {
+		text-align: left;
+
+		.footer-links {
+		    float: right;
+		}
+	}
+
+	.footer-links {
+		a {
+			margin-left: 20px;
+			font-size: 11px;
+		}
+	}
+}
+
+@media (min-width: 768px) {
+  #listings-page .price {
+    text-align: right;
+  }
+}
+
+.jumbotron.home-search {
+    background: transparent;
+}
+
+
+
+.home-search {
+    padding-bottom: 0;
+    .main_description {
+	    text-align: center;
+	}
+
+	.form-control {
+	    padding: 20px 8px;
+	}
+
+	.input-group-addon {
+	    padding: 0;
+	}
+
+	.btn {
+		border-radius: 4px;
+		text-transform: uppercase;
+		text-shadow: none;
+		font: {
+  		    weight: 100;
+  		    family: 'Varela Round', sans-serif;
+  		}
+	}
+
+	.input-group-addon.input-group-addon-text {
+	    background: #ffffff;
+	    color: #000;
+	    border: none;
+	    padding-right: 20px;
+	}
+
+	.input-group-addon {
+		li {
+			a {
+				text-align: left;
+	  			padding: 10px 18px;		
+			}
+		}
+
+		.btn {			
+			color: #000;
+  			font: {
+  			    weight: 100;  			  
+  			}    
+  			padding: 9px 18px;
+		    text-transform: none;
+		    		    
+		    .dropdown-menu {
+		    	ul {
+		    		il {
+		    			a {
+		    				text-align: left;
+		    			}
+		    		}
+		    	}
+		    }
+		}
+	}  
+}
+ 
+.search-btn {
+    width: 180px;
+    float: none;
+} 
+
+.directory {
+	h2 {
+		text-align: center;
+	  	text-transform: uppercase;
+	  	margin-bottom: 30px;
+	  	margin-top: 45px;
+	  	z-index: 1;
+	  	position: relative;
+	  	font: {
+	  	    size: 20px;
+	  	    family: 'Varela Round', sans-serif;
+		    weight: 400;
+		}
+		color: #000;
+		line-height: 18px;
+
+	  	span {
+	  		background: #ffffff;
+		  	padding: 0 10px;
+		}
+	} 
+
+	h2:before {
+		border-top: 2px solid #dfdfdf;
+	  	content: "";
+	  	margin: 0 auto;
+	  	position: absolute;
+	  	top: 7px;
+	  	left: 0;
+	  	right: 0;
+	  	bottom: 0;
+	  	width: 95%;
+	  	z-index: -1;
+	}
+
+	h4 {
+		font-size: 14px;
+		line-height: 20px;
+	 	margin-top: 0px;
+	}
+
+	i {
+	  	font-size: 29px;
+	  	color: #79A618;
+	}
+
+	.directory-block {
+	  	min-height: 131px;
+	}	  
+}
+
+.directory-counties {
+  	margin-top: 10px;
+  	overflow: hidden;
+
+  	h4 {
+	  	font-weight: bold;
+	  	margin-top: 0px;
+	  	margin-bottom: 0px;
+	}
+}
+
+#myTab {
+	margin-top: 18px;
+}
+
+.counties-pane {
+	background: #F7F7F7;
+	border-bottom: 1px solid #e6e6e6;
+	border-right: 1px solid #e6e6e6;
+	border-left: 1px solid #e6e6e6;
+
+	min-height: 150px;
+	overflow: hidden;
+	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+ 
+
+.featured-gallery {
+	border: none;
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-bottom: 0px;
+
+	.featured-thumbnail {
+		margin-bottom: 5px;
+		padding-left: 2px;
+		padding-right: 2px;
+
+		img {
+			text-align: center;
+			height: 60px;
+			width: 121px;
+		}
+	}
+}
+
+
+
+/**************************************
+* 
+*  Adverts listing
+*
+**************************************/
+.search-btn {
+	width: 180px;
+	float: none;
+}
+
+.btn {
+	text-transform: uppercase;
+}
+
+.home-tron-search {
+	.input-group-addon.input-group-addon-text {
+		background: transparent;
+		color: #000;
+		border: none;
+		padding-right: 20px;
+	}
+
+	.form-control {
+		padding: 0px 15px;
+		height: 47px;
+	}
+
+	.btn {
+		-moz-user-select: none;
+		border: 1px solid transparent;
+		cursor: pointer;
+		display: inline-block;
+		font-size: 13px;
+		font-weight: normal;
+		line-height: 1.42857;
+		margin-top: 0;
+		padding: 13px 15px;
+		text-align: center;		
+		vertical-align: middle;
+		white-space: nowrap;
+	}
+
+	.input-group-addon {
+		border-radius: 0px;
+		padding: 0;		
+
+		.btn {
+			&:active {
+				background: none;
+				box-shadow: inset 0 0px 0 #ffffff;
+			} 
+
+			background: none;
+			border: 1px solid transparent;
+			color: #000;	
+			cursor: pointer;
+			display: inline-block;			
+			font : {
+				weight: 100;
+				size: 13px;
+			}
+			line-height: 1.42857;
+			margin-top: 0;
+			padding: 9px 18px;
+			text-align: center;
+			vertical-align: middle;
+			white-space: nowrap;
+			text-transform: none;
+		}
+
+		.open {
+			.btn {
+				background: none;
+				box-shadow: inset 0 0px 0 #ffffff;
+			}
+		}	
+	}
+}	
+
+.breadcrumb {
+	background: none;
+
+	& > .active {
+		color: #555555;
+	}
+}
+
+.directory-counties {
+	margin-top: 10px;
+	overflow: hidden;
+}
+
+#myTab {
+	margin-top: 18px;
+}
+
+.sidebar {
+	#myTab.nav > li > a {
+		padding: 4px 10px;
+	}	
+
+	.nav > li > a {
+		padding: 1px 10px;
+	}
+
+	label {
+		font-weight: 100;
+	}
+
+	.form-control {
+		border-radius: 0px;
+		height: 25px;
+		line-height: 25px;
+		padding: 0;		
+		width: 100%;
+	}
+
+	.filter-row {
+		margin-bottom: 10px;
+	}
+
+	.input-group-addon {
+		border-radius: 0px;
+		padding: 0 7px;
+	}
+
+	.price-input {
+		padding-left: 5px;
+	}
+} 
+
+.bs-countries-modal-sm {
+	display: none;
+	height: 0;
+
+	.modal-dialog {
+		right: -13px;
+		top: 16px;
+		width: 600px;
+		z-index: 6;
+
+		.modal-content {
+			border-radius: 0px !important;
+		}
+	}
+}
+
+.nav-category {	
+	.remove-category {
+		display: none;
+	}
+
+	li {
+		&:hover {
+		    .remove-category {
+				display: block;
+				float: right;
+
+				i {
+					color: #FF0000;
+				}
+			}	
+		}
+	}	
+}
+
+.counties-pane {
+	min-height: 150px;
+	overflow: hidden;
+	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.thumbnail, .img-thumbnail {
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+}
+
+.ribbon-wrapper-red {
+	width: 124px;
+	height: 124px;
+	overflow: hidden;
+	position: absolute;
+	top: 0px;
+	right: -5px;
+
+	.ribbon-red {
+		font: bold 10px Sans-Serif;
+		color: #333;
+		text-align: center;
+		/* text-shadow: rgba(255,255,255,0.5) 0px 1px 0px; */
+		-webkit-transform: rotate(45deg);
+		-moz-transform: rotate(45deg);
+		-ms-transform: rotate(45deg);
+		-o-transform: rotate(45deg);
+		position: relative;
+		padding: 7px 0;
+		right: -33px;
+		top: 10px;
+		width: 115px;
+		background-image: -webkit-linear-gradient(top, #cc0000 0%, #990000 100%);
+		background-image: linear-gradient(to bottom, #cc0000 0%, #990000 100%);
+		background-repeat: repeat-x;
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcc0000', endColorstr='#ff990000', GradientType=0);
+		color: #ffffff;
+		-webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+		box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+		z-index: 1;
+		text-transform: uppercase;
+
+		&:before,
+		&:after {
+		  content: "";
+		  border-top: 3px solid #6e8900;
+		  border-left: 3px solid transparent;
+		  border-right: 3px solid transparent;
+		  position: absolute;
+		  bottom: -3px;
+		}
+
+		&:before {
+		  left: 0;
+		}
+		
+		&:after {
+		  right: 0;
+		}
+
+		span {
+			position: absolute;
+			right: 25px;
+			top: 7px;
+		}
+	}
+}
+
+.listings {
+	h3 {
+		font-size: 16px;
+		margin: 0;		
+		line-height: 20px;
+	}
+
+	p {
+		margin: 0;
+	}
+
+	.listing-row {
+		border-bottom: 1px solid #e6e6e6;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.listing-row:nth-child(even) {
+		background: #fafafa;
+	}
+
+	.premium.listing-row {
+		background: #FFFFDD;
+		background: #E0F4FF;
+		border-bottom: 1px solid #c6ebff;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		position: relative;
+	}	
+}
+
+.pagination > li > a, .pagination > li > span {
+	color: #333333;
+	border: 0px solid #007fff;
+	font-weight: bold;
+	font-size: 15px;
+	position: relative;
+	float: left;
+	padding: 10px 18px;
+	line-height: 1.428571429;
+	text-decoration: none;
+}
+
+.pagination li > a:hover {
+	color: #007fff;
+	background-color: #ffffff;
+}
+
+.pagination > .active > a {
+	color: #007fff;
+	background-color: #ffffff;
+
+	&:hover {
+		background-color: #ffffff;
+		color: #007fff;
+	}	
+}
+
+
+
+p.muted {
+	color: #999999;
+}
+/*************************************
+*  End of adverts listing
+*/
+
+
+
+
+/**************************************
+* Create account
+*/
+.topbar {
+	border: 3px solid #D2160A;
+}
+
+.account-sidebar { 
+	h3 {		
+		font-size: 16px;
+		line-height: 20px;
+		margin: 0;
+	}	
+
+	p {
+		margin: 0 0 9px;
+	}
+}
+/**************************************
+ * End of account creation
+*/
+
+
+/**
+ * Create advert
+*/
+.dropzone-image-preview {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100px;
+	height: 100px;
+}
+
+.dropzone-previews {
+	.dz-preview {
+		.dz-details {
+			img {
+				@extend .dropzone-image-preview;
+			}	
+		}	
+	}	
+}  
+
+.dropzone {
+	.dz-preview { 
+		.dz-details { 
+			img {
+				@extend .dropzone-image-preview;
+			}	
+		}	
+	}	
+}
+
+/****************************************
+* End of advert creation page
+*/
