--- a/project/app/assets/stylesheets/frontend.scss
+++ b/project/app/assets/stylesheets/frontend.scss
@@ -23,6 +23,36 @@
 		  		background-color: #E8E8E8;
 		  		border: 1px solid #DDDDDD;
 		  	}	
+	  	}
+
+	  	div {
+	  		.dropdown {
+	  			cursor: pointer;
+	  			display: inline;
+
+	  			padding: 5px;
+
+	  			a {	  				
+	  				text-decoration: none;
+	  				&:hover {
+	  					text-decoration: none;
+	  				}
+	  			}
+
+	  			ul {
+		  			&.dropdown-menu {
+		  				li.header-of-menu {
+		  					text-align: center;
+
+			  				strong {
+			  					padding: 5px;
+								text-transform: uppercase;
+								font-size: 12px;
+			  				}
+		  				}
+	  				}
+	  			}	
+	  		}
 	  	}	
     }
 }
