Customized the Category form by adding the ability to assign Custm Fields to Category

--- a/project/app/assets/stylesheets/frontend.scss
+++ b/project/app/assets/stylesheets/frontend.scss
@@ -1016,6 +1016,32 @@ p.muted {
 	padding-left: 0px !important;	
 }
 
+.category-panel {
+	.panel-default {
+		border: none;
+	}
+}
+
+.custom-fields {
+
+	.help-block {
+		padding-left:10px;
+	}
+
+	.category-custom-fields {
+		display: block;
+	    overflow: hidden;
+		padding-left: 20px;
+		margin-top: 5px;
+	}
+
+	.checkbox, .radio {
+
+		label {
+			padding-left:10px;
+		}
+	}	
+}
 /*******************************************
 * End of forms
 */
