Some local changes

--- a/project/app/assets/stylesheets/frontend.scss
+++ b/project/app/assets/stylesheets/frontend.scss
@@ -660,6 +660,7 @@
 	}	
 }
 
+/*
 .pagination > li > a, .pagination > li > span {
 	color: #333333;
 	border: 0px solid #007fff;
@@ -670,6 +671,27 @@
 	padding: 10px 18px;
 	line-height: 1.428571429;
 	text-decoration: none;
+}*/
+
+
+.pagination-container {
+	&:hover {
+		background-color: #fff !important; 
+	}
+	
+	text-align: center;	
+}
+
+.pagination>li>a, .pagination>li>span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  margin-left: -1px;
+  line-height: 1.42857143;
+  color: #337ab7;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #ddd;
 }
 
 .pagination li > a:hover {
@@ -851,11 +873,9 @@ p.muted {
 }
 
 .button-panel {
-	margin-top:10px;
-	margin-bottom:10px;
-
-	button {
-		margin-bottom:5px;
+	.btn-cancel {		
+		border-radius: 4px !important;
+		padding: 6px 12px !important;
 	}
 }
 
@@ -1014,6 +1034,16 @@ p.muted {
 .col-xs-3.inputContainer {
 	float: none;
 	padding-left: 0px !important;	
+}
+
+.edit-link {
+	color: #337ab7 !important;
+}
+
+.list-of-fieldsets {
+	.display-status {
+		display: inline !important;
+	}	
 }
 
 /*******************************************
